[build-system]
requires = [ "setuptools" ]
build-backend = "setuptools.build_meta"

[project]
name = "unidock_tools"
version = "0.0.1"
#dynamic = [ "version" ]
keywords = [ "Docking" ]
authors = [
    { name = "Yannan Yuan", email = "yuanyn@dp.tech" },
    { name = "Hang Zheng", email = "zhengh@dp.tech" }
]
description = "Several docking-related applications based on Uni-Dock."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Environment :: GPU :: NVIDIA CUDA",
    "License :: OSI Approved :: Apache Software License",
]
#dependencies = [
#    "rdkit",
#    "networkx",
#]

[tool.setuptools.package-data]
"*" = ["*.dat"]

[project.urls]
Homepage = "https://github.com/dptech-corp/Uni-Dock"
Repository = "https://github.com/dptech-corp/Uni-Dock.git"

[project.scripts]
unidocktools = "unidock_tools.main:main_cli"

#[project.entry-points."unidocktools"]
#unidocktools = "unidock_tools.main:main_cli"

[tool.pyright]
include = ["unidock_tools"]
exclude = ["**/node_modules",
    "**/__pycache__",
    "unidock_tools/data"
]
pythonVersion = "3.11"
pythonPlatform = "Linux"
reportMissingImports = false
reportMissingModuleSource = false
reportMissingTypeStubs = false
reportAttributeAccessIssue = false
reportIncompatibleMethodOverride = false