[build-system]
requires = [ "setuptools" ]
build-backend = "setuptools.build_meta"

[project]
name = "unidock_tools"
version = "0.0.1"
#dynamic = [ "version" ]
keywords = [ "Docking" ]
authors = [
    { name = "Yannan Yuan", email = "yuanyn@dp.tech" },
    { name = "Hang Zheng", email = "zhengh@dp.tech" },
    { name = "Hong-Rui Lin", email = "linhongrui@dp.tech" },
    { name = "Pengli Zhang", email = "zhangpengli@dp.tech" }
]
description = "Several docking-related applications based on Uni-Dock."
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "rdkit",
    "networkx",
    "numpy",
    "pandas",
    "pathos",
]

license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Environment :: GPU :: NVIDIA CUDA",
    "License :: OSI Approved :: Apache Software License",
]

[tool.setuptools.package-data]
"*" = ["*/bin/*","*/data/*"]


[project.urls]
Homepage = "https://github.com/dptech-corp/Uni-Dock"
Repository = "https://github.com/dptech-corp/Uni-Dock.git"

[project.scripts]
unidocktools = "unidock_tools.main:main_cli"

[tool.ruff]
exclude = ["tests/"]
src = ["src"]
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = ["E", "F", "W", "B", "SIM", "I"]
